<resources>
    <string name="app_name">DevLab1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_hint">+7 (___) ___-__-__</string>
    <string name="get_code_btn">Получить код</string>
    <string name="sign_in_title">войти или\nзарегистрироваться</string>
    <string name="sms_with_code">Мы отправим на номер SMS-сообщение\nс кодом подтверждения</string>
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="mail">Mail</string>
    <string name="settings">Settings</string>
    <string name="sec_secondary_text">Личные сообщения - это приватная\nпереписка в Твиттере. В них можно\nделиться твитами, медиафайлами и другим\nконтентом.</string>
    <string name="sec_primary_text">Отправляйте и получайте\nсообщения</string>
    <string name="write_message">Написать сообщение</string>
    <string name="fake_name">Асель Романова</string>
    <string name="thd_menu_list_1">Телефон и e-mail</string>
    <string name="thd_menu_list_2">Почтовые адреса</string>
    <string name="thd_menu_list_3">Данные о работадателе</string>
    <string name="thd_menu_list_4">Регион для платежей</string>
    <string name="what_to">What to</string>
    <string name="watch">Watch?</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_str">Войти</string>
    <string name="no_acc_string">Нет аккаунта?</string>
    <string name="reg_call_btn_string">Зарегистрируйся</string>
    <string name="fab_add_mail">fab add mail</string>
    <string name="exit_str">Выйти из\nприложения</string>
    <string name="email_hint">Электронная почта</string>
    <string name="enter_btn">Вход</string>
</resources>