<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sec_colorPrimaryDark"
    tools:context=".SecondFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sec_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/sec_colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="Сообщения"
        app:menu="@menu/menu_top_sec"
        app:navigationIcon="@drawable/ic_menu"
        app:titleTextColor="@color/white"
        android:theme="@style/SecToolBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/sec_toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sec_primary_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sec_secondary_text"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/sec_bottom_icon_color"
            android:textSize="15sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_message"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:background="@drawable/write_message_button_bg"
            android:layout_gravity="center"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_add_mail"
        android:tint="@color/white"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        app:menu="@menu/menu_bottom_sec"
        android:layout_width="match_parent"
        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/sec_bottom_icon_color"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/sec_colorPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>