<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thd_colorPrimary"
    tools:context=".ThirdFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/thirdToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/thd_colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Профиль"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/avatarIV"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdToolbar" />

    <TextView
        android:id="@+id/fakeNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fake_name"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/avatarIV"
        app:layout_constraintStart_toStartOf="@+id/avatarIV"
        app:layout_constraintTop_toBottomOf="@+id/avatarIV" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/fakeNameTV"
        app:layout_constraintStart_toStartOf="@+id/fakeNameTV"
        app:layout_constraintTop_toBottomOf="@+id/fakeNameTV">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/thd_exit_btn_bg"
            android:src="@drawable/ic_exit"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Выйти из\nприложения"
            android:textAlignment="center"
            android:textColor="@color/thd_colorSecondary"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatarIV" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thd_call_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/thd_shadow_bg"
            android:padding="12dp"
            android:src="@drawable/ic_call"
            android:tint="@color/thd_colorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/thd_menu_list_1"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thd_mail_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/thd_call_list_item">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/thd_shadow_bg"
            android:padding="12dp"
            android:src="@drawable/ic_mail"
            android:tint="@color/thd_colorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/thd_menu_list_2"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thd_doc_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/thd_mail_list_item">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/thd_shadow_bg"
            android:padding="12dp"
            android:src="@drawable/ic_document"
            android:tint="@color/thd_colorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/thd_menu_list_3"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thd_pay_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/thd_doc_list_item">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/thd_shadow_bg"
            android:padding="12dp"
            android:src="@drawable/ic_ruble"
            android:tint="@color/thd_colorSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/thd_menu_list_4"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>